--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Darr3n's Website
 
 # Your name to show in the footer
-author: darr3n
+author: Darr3n
 
 # --- List of links in the navigation bar --- #
 
