--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Darr3n's Website
+title: Darr3n
 
 # Your name to show in the footer
 author: Darr3n
