--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,12 @@ author: Darr3n
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
+#  About Me: "aboutme"
+  DEVMANTOO: "https://bitbucket.org/darboo/development-management-tool/src/master/"
+
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  DEVMANTOO: "https://bitbucket.org/darboo/development-management-tool/src/master/"
 
 # --- Logo --- #
 
